[project]
name = "quart-injector"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "quart~=0.18.4",
    "injector>=0.19.0,<1.0.0"
]

[project.optional-dependencies]
dev = ["shed", "pylint", "mypy", "pyenchant"]
test = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-pylint", "pytest-mypy", "pytest-pydocstyle"]
doc = ["docformatter", "pydocstyle", "myst-parser", "sphinx-artisan-theme", "autodocsumm", "sphinx-autobuild", "sphinxcontrib-spelling"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
known_localfolder = ['tests']

[tool.pylint.master]
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.mccabe",
    "pylint.extensions.docstyle",
    "pylint.extensions.check_elif",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.docparams",
    "pylint.extensions.empty_comment",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used",
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "to"]

[tool.pylint.messages_control]
disable = [
    "docstring-first-line-empty",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.spelling]
spelling-dict = "en_GB"
spelling-private-dict-file = ".dictionary"

[tool.pylint.similarities]
ignore-signatures = true
ignore-imports = true

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "strict"
testpaths = "tests"
filterwarnings = [
    "error",
    "ignore::pytest.PytestRemovedIn8Warning",
    "ignore::DeprecationWarning:pylint.*"
]

[tool.pylint.parameter_documentation]
default-docstring-type = "sphinx"

[tool.mypy]
strict = true

[tool.pydocstyle]
add-ignore = [
    "D102",
    "D105",
    "D107",
    "D200",
    "D212",
]